GIF API + Docs update
